--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -19,5 +19,6 @@ clap_derive = { workspace = true }
 color-eyre = { workspace = true }
 fjall = { workspace = true }
 log = { workspace = true }
+rayon = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
